--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -6,16 +6,13 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true"
-	tools:openDrawer="start"
-	tools:context="ru.leonidivankin.photovkapp.MainActivity">
-
+	tools:context="ru.leonidivankin.photovkapp.MainActivity"
+	tools:openDrawer="start">
 
 	<fragment
 		android:name="ru.leonidivankin.photovkapp.BlankFragment"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"></fragment>
-
-</LinearLayout>
+		android:layout_height="match_parent" />
 
 	<include
 		layout="@layout/app_bar_main"
