--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -1,32 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/drawer_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true"
-	tools:context="ru.leonidivankin.photovkapp.MainActivity"
-	tools:openDrawer="start">
+	tools:context=".MainActivity">
 
-	<fragment
-		android:name="ru.leonidivankin.photovkapp.BlankFragment"
+	<android.support.design.widget.AppBarLayout
+		android:id="@+id/app_bar"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
-
-	<include
-		layout="@layout/app_bar_main"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
-
-	<android.support.design.widget.NavigationView
-		android:id="@+id/nav_view"
-		android:layout_width="wrap_content"
-		android:layout_height="match_parent"
-		android:layout_gravity="start"
+		android:layout_height="@dimen/app_bar_height"
 		android:fitsSystemWindows="true"
-		app:headerLayout="@layout/nav_header_main"
-		app:menu="@menu/activity_main_drawer" />
+		android:theme="@style/AppTheme.AppBarOverlay">
 
-</android.support.v4.widget.DrawerLayout>
+		<android.support.design.widget.CollapsingToolbarLayout
+			android:id="@+id/toolbar_layout"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:fitsSystemWindows="true"
+			app:contentScrim="?attr/colorPrimary"
+			app:layout_scrollFlags="scroll|snap|enterAlways|enterAlwaysCollapsed"
+			app:toolbarId="@+id/toolbar">
+
+			<android.support.v7.widget.Toolbar
+				android:id="@+id/toolbar"
+				android:layout_width="match_parent"
+				android:layout_height="?attr/actionBarSize"
+				android:minHeight="40dp"
+				app:layout_collapseMode="pin"
+				app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+		</android.support.design.widget.CollapsingToolbarLayout>
+	</android.support.design.widget.AppBarLayout>
+
+	<include layout="@layout/content_scrolling" />
+
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/fab"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_margin="@dimen/fab_margin"
+		android:layout_gravity="bottom|end"
+		app:srcCompat="@android:drawable/ic_menu_add"/>
+
+</android.support.design.widget.CoordinatorLayout>
 
