--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -1,14 +1,11 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context=".MainActivity">
+	android:layout_height="match_parent">
 
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_margin="@dimen/text_margin"
-		android:text="@string/large_text" />
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/id_recycler_view"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent" />
 
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
