--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/id_card_view"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:orientation="vertical">
+	android:layout_height="250dp"
+	android:layout_margin="8dp">
 
 	<ImageView
 		android:id="@+id/image_view"
@@ -15,4 +16,4 @@
 		android:layout_width="match_parent"
 		android:layout_height="50dp" />
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
