add star color change

--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -6,10 +6,25 @@
 	android:layout_height="250dp"
 	android:layout_margin="8dp">
 
-	<ImageView
-		android:id="@+id/image_view"
+	<FrameLayout
 		android:layout_width="match_parent"
-		android:layout_height="200dp" />
+		android:layout_height="match_parent">
+
+		<ImageView
+			android:id="@+id/id_image_view_photo"
+			android:layout_width="match_parent"
+			android:layout_height="200dp" />
+
+		<ImageView
+			android:id="@+id/id_image_view_star"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center"
+			android:elevation="10dp"
+			android:src="@drawable/ic_grade_black_48dp" />
+
+	</FrameLayout>
+
 
 	<TextView
 		android:id="@+id/text_view"
