--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -13,14 +13,14 @@
 		<ImageView
 			android:id="@+id/id_image_view_photo"
 			android:layout_width="match_parent"
-			android:layout_height="200dp" />
+			android:layout_height="wrap_content" />
 
 		<ImageView
 			android:id="@+id/id_image_view_star"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_gravity="center"
-			android:elevation="10dp"
+			android:layout_gravity="end|top"
+			android:padding="10dp"
 			android:src="@drawable/ic_grade_black_48dp" />
 
 	</FrameLayout>
