--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -27,7 +27,7 @@
 
 
 	<TextView
-		android:id="@+id/text_view"
+		android:id="@+id/id_text_view"
 		android:layout_width="match_parent"
 		android:layout_height="50dp" />
 
