--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent"
+	android:fitsSystemWindows="true"
+	tools:context=".MainActivity">
 
-	<TextView
+	<android.support.design.widget.AppBarLayout
+		android:id="@+id/app_bar"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:fitsSystemWindows="true"
+		android:theme="@style/AppTheme.AppBarOverlay">
+
+		<android.support.v7.widget.Toolbar
+			android:id="@+id/toolbar"
+			android:layout_width="match_parent"
+			android:layout_height="?attr/actionBarSize"
+			android:minHeight="40dp"
+			app:layout_collapseMode="pin"
+			app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+		<android.support.design.widget.TabLayout
+			android:id="@+id/tabs"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content">
+
+			<android.support.design.widget.TabItem
+				android:id="@+id/tabItem"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/tab_text_1" />
+
+			<android.support.design.widget.TabItem
+				android:id="@+id/tabItem2"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/tab_text_2" />
+
+			<android.support.design.widget.TabItem
+				android:id="@+id/tabItem3"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/tab_text_3" />
+		</android.support.design.widget.TabLayout>
+
+	</android.support.design.widget.AppBarLayout>
+
+	<android.support.v4.view.ViewPager
+		android:id="@+id/view_pager"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+	</android.support.v4.view.ViewPager>
+
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/fab"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Only v21" />
+		android:layout_gravity="bottom|end"
+		android:layout_margin="@dimen/fab_margin"
+		app:srcCompat="@android:drawable/ic_menu_add" />
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
