--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -1,34 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/id_card_view"
-	android:layout_width="match_parent"
-	android:layout_height="250dp"
-	android:layout_margin="8dp">
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:layout_margin="8dp">
 
-	<FrameLayout
-		android:layout_width="match_parent"
-		android:layout_height="match_parent">
-
-		<ImageView
-			android:id="@+id/id_image_view_photo"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content" />
-
-		<ImageView
-			android:id="@+id/id_image_view_star"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="end|top"
-			android:padding="10dp"
-			android:src="@drawable/ic_grade_black_48dp" />
-
-	</FrameLayout>
-
-
-	<TextView
-		android:id="@+id/id_text_view"
-		android:layout_width="match_parent"
-		android:layout_height="50dp" />
+    <ImageView
+        android:id="@+id/image_view_item_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </android.support.v7.widget.CardView>
