--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,26 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="colorPrimary">#3F51B5</color>
-	<color name="colorPrimaryDark">#303F9F</color>
-	<color name="colorAccent">#FF4081</color>
+	<color name="colorPrimary">#259b24</color>
+	<color name="colorPrimaryDark">#0a7e07</color>
+	<color name="colorAccent">#ffab40</color>
 
-	<color name="theme_blue_orange_primary">#2196F3</color>
-	<color name="theme_blue_orange_primary_dark">#1976D2</color>
-	<color name="theme_blue_orange_primary_light">#BBDEFB</color>
-	<color name="theme_blue_orange_accent">#FF9800</color>
-	<color name="theme_blue_orange_primary_text">#212121</color>
-	<color name="theme_blue_orange_secondary_text">#757575</color>
-	<color name="theme_blue_orange_icons">#FFFFFF</color>
-	<color name="theme_blue_orange_divider">#BDBDBD</color>
 
-	<color name="colors_deep_purple_green_primary">#673AB7</color>
-	<color name="colors_deep_purple_green_primary_dark">#512DA8</color>
-	<color name="colors_deep_purple_green_primary_light">#D1C4E9</color>
-	<color name="colors_deep_purple_green_accent">#4CAF50</color>
-	<color name="colors_deep_purple_green_primary_text">#212121</color>
-	<color name="colors_deep_purple_green_secondary_text">#757575</color>
-	<color name="colors_deep_purple_green_icons">#FFFFFF</color>
-	<color name="colors_deep_purple_green_divider">#BDBDBD</color>
-
-	<color name="color_star_black">#FF000000</color>
 </resources>
