--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -5,9 +5,9 @@
     android:layout_height="200dp"
     android:layout_margin="8dp">
 
-    <ImageView
-        android:id="@+id/image_view_item_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <TextView
+        android:id="@+id/text_view_item_recycler_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </android.support.v7.widget.CardView>
