--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
+
+    <ImageView
+        android:id="@+id/image_view_item_recycler_view"
+        android:layout_width="200dp"
+        android:layout_height="20dp" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -10,4 +17,4 @@
         android:layout_centerInParent="true"
         android:text="" />
 
-</RelativeLayout>
+</LinearLayout>
