--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    android:layout_margin="8dp">
 
-    <ImageView
-        android:id="@+id/image_view_item_recycler_view"
-        android:layout_width="200dp"
-        android:layout_height="20dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:text="" />
+        <ImageView
+            android:id="@+id/image_view_item_recycler_view"
+            android:layout_width="200dp"
+            android:layout_height="100dp" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/text_view_item_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:text="" />
+
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
+
