--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -3,18 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.PhotoActivity"
+    tools:context=".view.photoactivity.PhotoActivity"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image_view_photo_activity"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        tools:srcCompat="@drawable/ic_cloud_download_black_48dp"
+        android:layout_weight="90"
+        android:padding="8dp"/>
 
     <TextView
-        android:text="Activity"
         android:id="@+id/text_view_photo_activity"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        tools:text="TextView"
+        android:layout_weight="10"/>
 
 </LinearLayout>
