--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         tools:text="TextView"
+        android:layout_gravity="center"
         android:layout_weight="10"/>
 
 </LinearLayout>
